Fix label overflow issue

--- a/src/components/popup/_popup.module.scss
+++ b/src/components/popup/_popup.module.scss
@@ -15,7 +15,7 @@
 	position: fixed !important;
 	flex-grow: 1 !important;
 	min-width: 40% !important;
-	// max-width: 40% !important;
+	max-width: 40% !important;
 	transform: translateZ(0) !important;
 	overflow-y: auto !important;
 	background-color: $black-color !important;
